--- a/AppCode/Stylr/Stylr/MainViewController.xib
+++ b/AppCode/Stylr/Stylr/MainViewController.xib
@@ -15,20 +15,36 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yourimage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TwK-rd-fnp">
-                    <rect key="frame" x="10" y="20" width="341" height="327"/>
+                    <rect key="frame" x="10" y="20" width="341" height="250"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="250" id="Pqo-Qp-W3s"/>
+                    </constraints>
                 </imageView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TDV-BZ-k6w">
+                    <rect key="frame" x="10" y="298" width="341" height="313"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="iRw-MJ-CFT">
+                        <size key="itemSize" width="150" height="150"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="TwK-rd-fnp" secondAttribute="trailing" constant="10" id="Njq-va-eA2"/>
-                <constraint firstItem="TwK-rd-fnp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="h6f-Gk-H6k"/>
-                <constraint firstItem="TwK-rd-fnp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="oXh-GH-a2d"/>
+                <constraint firstItem="TwK-rd-fnp" firstAttribute="leading" secondItem="TDV-BZ-k6w" secondAttribute="leading" id="T2p-CL-HeY"/>
+                <constraint firstItem="TwK-rd-fnp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="adH-Js-diS"/>
+                <constraint firstItem="TwK-rd-fnp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="gOJ-qq-OIB"/>
+                <constraint firstItem="TwK-rd-fnp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="hsH-6J-zpa"/>
+                <constraint firstItem="TwK-rd-fnp" firstAttribute="trailing" secondItem="TDV-BZ-k6w" secondAttribute="trailing" id="iYW-ON-u29"/>
+                <constraint firstAttribute="bottom" secondItem="TDV-BZ-k6w" secondAttribute="bottom" constant="15" id="wyb-54-68e"/>
+                <constraint firstItem="TDV-BZ-k6w" firstAttribute="top" secondItem="TwK-rd-fnp" secondAttribute="bottom" constant="28" id="zCZ-tz-r7n"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="405.5" y="323"/>
+            <point key="canvasLocation" x="638.5" y="480"/>
         </view>
     </objects>
     <resources>
-        <image name="yourimage.jpg" width="582" height="327"/>
+        <image name="yourimage.jpg" width="723" height="540"/>
     </resources>
 </document>
