--- a/AppCode/Stylr/Stylr/CollectionViewCell.xib
+++ b/AppCode/Stylr/Stylr/CollectionViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -13,10 +13,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XIb-yn-wp6">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="125"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDv-r4-D3R">
-                        <rect key="frame" x="54" y="65" width="42" height="21"/>
+                        <rect key="frame" x="54" y="129" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -27,9 +27,9 @@
             <constraints>
                 <constraint firstItem="XIb-yn-wp6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IJS-NB-OhS"/>
                 <constraint firstAttribute="centerX" secondItem="CDv-r4-D3R" secondAttribute="centerX" id="IxZ-SR-AWN"/>
-                <constraint firstAttribute="centerY" secondItem="CDv-r4-D3R" secondAttribute="centerY" id="Z3M-Ed-hq2"/>
+                <constraint firstAttribute="bottom" secondItem="CDv-r4-D3R" secondAttribute="bottom" id="Z3M-Ed-hq2" userLabel="Bottom Y Alignment - Collection View Cell - Label"/>
                 <constraint firstAttribute="trailing" secondItem="XIb-yn-wp6" secondAttribute="trailing" id="bjB-a2-D2m"/>
-                <constraint firstAttribute="bottom" secondItem="XIb-yn-wp6" secondAttribute="bottom" id="kud-bn-0gP"/>
+                <constraint firstAttribute="bottom" secondItem="XIb-yn-wp6" secondAttribute="bottom" constant="25" id="kud-bn-0gP"/>
                 <constraint firstItem="XIb-yn-wp6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uVV-bv-vsO"/>
             </constraints>
             <size key="customSize" width="150" height="150"/>
