--- a/android/Stylr/app/src/main/res/layout/activity_main.xml
+++ b/android/Stylr/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         <GridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/gridView">
+            android:id="@+id/gridView"
+            android:numColumns="2">
 
 
         </GridView>
