--- a/AppCode/Stylr/Stylr/MainViewController.xib
+++ b/AppCode/Stylr/Stylr/MainViewController.xib
@@ -14,17 +14,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="-1" width="361" height="626"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yourimage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TwK-rd-fnp">
-                    <rect key="frame" x="10" y="20" width="341" height="250"/>
+                    <rect key="frame" x="10" y="20" width="355" height="250"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="250" id="Pqo-Qp-W3s"/>
                     </constraints>
                 </imageView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TDV-BZ-k6w">
-                    <rect key="frame" x="10" y="298" width="341" height="313"/>
+                    <rect key="frame" x="10" y="298" width="355" height="354"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="iRw-MJ-CFT">
                         <size key="itemSize" width="150" height="150"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -33,7 +33,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auW-9l-8nE">
-                    <rect key="frame" x="15" y="269" width="42" height="21"/>
+                    <rect key="frame" x="15" y="269" width="336" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -49,7 +49,8 @@
                 <constraint firstAttribute="bottom" secondItem="TDV-BZ-k6w" secondAttribute="bottom" constant="15" id="wyb-54-68e"/>
                 <constraint firstItem="TDV-BZ-k6w" firstAttribute="top" secondItem="TwK-rd-fnp" secondAttribute="bottom" constant="28" id="zCZ-tz-r7n"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <nil key="simulatedStatusBarMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="1137.5" y="489"/>
         </view>
     </objects>
