--- a/AppCode/Stylr/Stylr/CollectionViewCell.xib
+++ b/AppCode/Stylr/Stylr/CollectionViewCell.xib
@@ -7,17 +7,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="Stylr" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XIb-yn-wp6">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="125"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XIb-yn-wp6">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="145"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDv-r4-D3R">
-                        <rect key="frame" x="54" y="129" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDv-r4-D3R">
+                        <rect key="frame" x="54" y="146" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="42" translatesAutoresizingMaskIntoConstraints="NO" id="pbo-JI-eYM" userLabel="LabelPrice">
+                        <rect key="frame" x="27" y="169" width="94" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -25,19 +31,23 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstItem="XIb-yn-wp6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IJS-NB-OhS"/>
-                <constraint firstAttribute="centerX" secondItem="CDv-r4-D3R" secondAttribute="centerX" id="IxZ-SR-AWN"/>
-                <constraint firstAttribute="bottom" secondItem="CDv-r4-D3R" secondAttribute="bottom" id="Z3M-Ed-hq2" userLabel="Bottom Y Alignment - Collection View Cell - Label"/>
-                <constraint firstAttribute="trailing" secondItem="XIb-yn-wp6" secondAttribute="trailing" id="bjB-a2-D2m"/>
-                <constraint firstAttribute="bottom" secondItem="XIb-yn-wp6" secondAttribute="bottom" constant="25" id="kud-bn-0gP"/>
-                <constraint firstItem="XIb-yn-wp6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uVV-bv-vsO"/>
+                <constraint firstItem="XIb-yn-wp6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="49k-i1-CJc"/>
+                <constraint firstAttribute="trailing" secondItem="XIb-yn-wp6" secondAttribute="trailing" id="AY5-vC-Y2G"/>
+                <constraint firstAttribute="bottom" secondItem="pbo-JI-eYM" secondAttribute="bottom" id="Lfa-QV-Whp"/>
+                <constraint firstItem="XIb-yn-wp6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Rgk-8i-PLJ"/>
+                <constraint firstItem="XIb-yn-wp6" firstAttribute="centerX" secondItem="CDv-r4-D3R" secondAttribute="centerX" id="SdP-1J-IPC"/>
+                <constraint firstItem="CDv-r4-D3R" firstAttribute="top" secondItem="XIb-yn-wp6" secondAttribute="bottom" constant="1" id="d68-jh-Puf"/>
+                <constraint firstAttribute="bottom" secondItem="CDv-r4-D3R" secondAttribute="bottom" constant="23" id="kZE-FW-gMB"/>
+                <constraint firstAttribute="trailing" secondItem="pbo-JI-eYM" secondAttribute="trailing" constant="29" id="rJX-Tx-rBG"/>
+                <constraint firstItem="pbo-JI-eYM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="27" id="xBW-B0-eKZ"/>
             </constraints>
-            <size key="customSize" width="150" height="150"/>
+            <size key="customSize" width="150" height="190"/>
             <connections>
                 <outlet property="imageView" destination="XIb-yn-wp6" id="8Fs-pi-wox"/>
+                <outlet property="price" destination="pbo-JI-eYM" id="Alt-1G-LER"/>
                 <outlet property="title" destination="CDv-r4-D3R" id="JaU-xn-oi6"/>
             </connections>
-            <point key="canvasLocation" x="345" y="223"/>
+            <point key="canvasLocation" x="345" y="243"/>
         </collectionViewCell>
     </objects>
 </document>
